--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "mongodb": "^4.1.2",
     "mongoose": "^6.0.12",
     "nodemon": "^2.0.15"
-  }
+  },
+  "engines": {
+    "node": "14.17.1"
+  }   
 }
